streamfinder/static/style.scss
.clearfix:after {
   content: "";
   visibility: hidden;
   display: block;
   height: 0;
   clear: both;
}
*:first-child+html .group { zoom: 1; } /* IE7 */

@font-face {
  font-family: 'LeagueGothic';
  src: url('/static/LeagueGothic-Regular.otf');
} 

$light-gray: #F3F3F3;
$medium-gray: #7E7E7E;
$dark-gray: #575757;

$small-font-size: 24pt;
$medium-font-size: 30pt;
$large-font-size: 60pt;

#site {
	width: 800px;
	margin: 0 auto;
  font-family: 'LeagueGothic', arial, sans-serif;
}

.header {
	color: $dark-gray;
	font-size: $medium-font-size;
	text-transform: uppercase;
}
div.counts {
	text-transform: none;
	&.selected {
		color: $dark-gray;
	}
}
img.league-logo {
	margin-bottom: -2px;
}

$padding: 10px;
.main-data {
	$border: 2px solid $medium-gray;

	border-top: $border;
	border-bottom: $border;
	padding: $padding;
	margin: (2 * $padding) 0;
	background-color: $light-gray;
	color: $medium-gray;
	font-size: $medium-font-size;
	text-transform: uppercase;

	h3 {
		color: $dark-gray;
		font-size: $large-font-size;
		text-transform: uppercase;
	}
	div.counts img {
		cursor: pointer;
	}
}

%match-main-data {
	img.game-logo {
		margin-top: 7px;
		float: left;
	}
	& > div {
		margin-top: round($small-font-size / 6);
	}
	div.teams {
		margin-left: 68px;
		text-transform: none;

		.team-name {
			text-transform: uppercase;
		}
		& > span {
			display: inline-block;
			white-space: nowrap;
		}
	}
}
#match {
	@extend %match-main-data;
	div.counts {
		float: right;
	}
}
#next-match {
	@extend %match-main-data;
	display: block;
	text-decoration: none;
	background-color: transparent;

	&:hover {
		background-color: $light-gray;
	}
}

#team {
	img.game-logo {
		margin-bottom: -3px;
	}
	img.external-link {
		margin-top: -3px;
	}
	div.counts {
		float: right;
	}
}

#streamer {
	img.picture {
		float: right;
	}
}

ul.data-list {
	$data-list-vert-padding: 5px;

	margin-top: $data-list-vert-padding;
	color: $medium-gray;
	font-size: $medium-font-size;
	text-transform: uppercase;

	li {
		$border: 2px solid $light-gray;

		border-bottom: $border;

		&:first-child {
			border-top: $border;
		}
		a {
			display: block;
			padding: $data-list-vert-padding $padding;
			text-decoration: none;
			color: $medium-gray;

			&:hover {
				background-color: $light-gray;
			}
			div.counts {
				float: right;
			}
		}
	}
}
.part {
	white-space: nowrap;
}

ul.team-list {
}

ul.streamer-list {
}

ul.match-list {
	img.game-logo {
		float: left;

		& + div {
			margin-left: 40px;
		}
	}
	div.teams {
		text-transform: none;
		span.team-name {
			text-transform: uppercase;
		}
	}
	div.datetime {
		font-size: $small-font-size;
	}
}

// Styles that override those in the Select2 stylesheet.
$select2-font-size: $small-font-size;
$select2-height: round(1.3 * $select2-font-size);

%select2-height {
	height: $select2-height;
	line-height: $select2-height;
}
%select2-font {
	font-family: 'LeagueGothic';
	font-size: $select2-font-size;
	text-transform: uppercase;
}
%select2-highlighted {
	background: $light-gray;
	color: $dark-gray;
}

.select2-container .select2-choice {
	@extend %select2-height;
	font-size: $select2-font-size;
	color: $dark-gray;
}
.select2-search input {
	@extend %select2-font;
	color: $dark-gray;
}

.select2-results {
	color: $medium-gray;

	.select2-result-label {
		@extend %select2-font;
		@extend %select2-height;
	}
	.select2-highlighted {
		@extend %select2-highlighted;
	}
	.select2-no-results {
		@extend %select2-font;
		@extend %select2-highlighted;
	}
}

#time-compare {
	h2 {
		color: $dark-gray;
	}
}

$settings-width: 600px;
$save-settings-failure-background-color: #fcf27a;
%settings-block {
	text-transform: uppercase;
	color: $dark-gray;
}
%settings-message {
	width: $settings-width - $padding;
	padding: $padding / 2;
}
%save-settings-status {
	@extend %settings-block;
	@extend %settings-message;
	font-size: $medium-font-size;
	margin-bottom: 2 * $padding;
}
div.save-settings-success {
	@extend %save-settings-status;
	background-color: #d6ec94;
}
div.save-settings-failure {
	@extend %save-settings-status;
	background-color: $save-settings-failure-background-color;
}

div.setting {
	text-transform: uppercase;
	h2 {
		color: $dark-gray;
		font-size: $medium-font-size;
	}
	select {
		width: $settings-width;
	}
	& + div.setting {
		margin-top: (2 * $padding);
	}
	ul.errors {
		@extend %settings-block;
		font-size: $small-font-size;
		li {
			@extend %settings-message;
			background-color: $save-settings-failure-background-color;
			margin-top: $padding / 2;
		}
	}
}

